# boilerHack

./: .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  package-lock.json  package.json  skills-lock.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: items.py
backend/app/core/: config.py  errors.py
backend/app/db/: base.py  session.py
backend/app/models/: item.py
backend/app/repositories/: base.py  item.py
backend/app/schemas/: item.py
backend/app/services/: item.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_items.py
backend/tests/: conftest.py  test_health.py  test_items.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/items/: page.tsx
src/components/: theme-toggle.tsx
src/features/items/: api.ts  hooks.ts  schemas.ts
src/features/items/components/: item-form.tsx  item-list.tsx
src/lib/: env.ts
src/lib/api/: client.ts
